--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fagnerlima/ng-mask": "^2.2.1",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "angular-datatables": "^6.0.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
